Small CSS fix; add flex-wrap:wrap to the relatedItems content

--- a/site/css/wea.css
+++ b/site/css/wea.css
@@ -594,6 +594,10 @@ div[data-type='listFigure'] img{
     
 }
 
+#relatedItems .content{
+    flex-wrap:wrap;
+}
+
 .JS .expandable.closed > .content{
     max-height:0;
     overflow:hidden;
